style.css
* {
    box-sizing: border-box;
}

body {
  font-family: 'Roboto Condensed', sans-serif;
  font-size: 20px;
  
}

.topnav {
  background-color: rgb(250, 250, 250);
  overflow: visible;
  position: fixed;
  width: 100%;
  z-index: 10;
  padding-left: 5px;
  padding-right: 5px;
}

/* Style the links inside the navigation bar */
.topnav a {
  display: inline-block;
  color: black;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 20px;
}


/* Add an active class to highlight the current page */
a.active {
  float: left;
  background-color: rgb(250, 250, 250);
  padding: 0;
  margin-left: 10px;
  margin-top: 10px;
  margin-bottom: 2px;
}

a.icon {
  background-color: rgb(250, 250, 250);
  padding: 0;
  margin-right: 10px;
  margin-top: 6px;
  margin-bottom: 2px;
}

.logoName {
  position: relative;
  bottom: 10px;
  left: 10px;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon {
  display: none;
}

.linkContainer {
  float: right;
}

/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
@media screen and (max-width: 600px) {
  .topnav a:not(.active) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
  }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
@media screen and (max-width: 600px) {
  .topnav.responsive {position: fixed;}
  .topnav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
  .linkContainer{
    float: left;
  }
  .logoName {
    font-size: 14px;
    bottom: 12px;
    left: 7px;
  }
}

main {
  padding-bottom: 40px;
  background-color: rgb(250, 250, 250);
}
  
header {
  padding-top: 60px;
  padding-bottom: 20%;
  color: white;
  margin-left: 15px;
  margin-right: 15px;
  background-image: url(images/hero_background.jpg);
  background-size: cover;
  background-position: center;
}

.heroText {
  position: relative;
  top: 10px;
}

.title {
  margin-top: 5%;
  margin-bottom: 2%;
  font-size: 150%;
  opacity: 0.8;
  text-align: center;
  font-weight: lighter;
  color: rgb(248, 247, 246);
  text-shadow: 1px 1px rgba(0, 0, 0, 0.200);
  text-transform: uppercase;
}

.subtitle {
  margin-bottom: 100px;
  margin-top: 3%;
  font-size: 100%;
  opacity: 0.8;
  text-align: center;
  font-weight: lighter;
  color: black;
}

section hr {
  border: none;
  height: 1px;
  color: gray; 
  background-color: gray; 
  width: 80%;
  opacity: 0.7;
  margin-left: auto;
  margin-right: auto;
}

h3 {
  font-weight: lighter;
  font-size: 130%;
  text-align: center;
}

section {
  min-height: 200px;
  padding: 2% 0;
  margin-left: 15px;
  margin-right: 15px;
}


.sectionHeader {
  margin-top:10px;
  margin-bottom: 10px;
  font-size: 25px;
}

.bioSection {
  margin-top: 15px;
  padding-left: 15px;
  padding-right: 15px;
}
.bioParagraph, .projectDescription, .contactBlurb {
  font-size: 18px;
  text-align: center;
}

.logo {
  width: 30px;
  height: 30px;

}

.hamburger {
  width: 25px;
  height: 30px;
}

.thinkful:link {
  text-decoration: none;
  color: rgba(76, 110, 117, 0.925);
}

.thinkful:visited {
  text-decoration: none;
  color: rgba(76, 110, 117, 0.925);
}

.thinkful:hover, .thinkful:focus {
  text-decoration: underline;
  color: rgb(66, 85, 92);
}

.bioContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;

}

.profpic {
  width: 100px;
  border-radius: 50%;
  margin: 25px auto 12px auto;
}

.section {
  display: flex;
  flex-direction: column;
}


.skillsSection {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.skillHeader, .projectHeader {
  font-weight: lighter;
  text-align: center;
}

.skillHeader {
  margin-top: 15px;
  margin-bottom: 10px;
  font-size: 22px;
}

.skillsContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.row {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.skillSymbol {
  width: 80px;
  height: 80px;
}

.backEnd, .tools {
  width: 70px;
  height: 70px;
}

.skillList {
  display: block;
  text-align: left;
  width: 130px;
}

.skillList > li {
  list-style: square;
}

.projectsSection {
  margin-top: 10px;
}

.project {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 5px 15px 45px;
}

.project:nth-child(2) {
  background-color: rgba(98, 141, 150, 0.950);
}

.project:nth-child(3) {
  background-color: rgb(126, 154, 163);
}

.project:nth-child(4) {
  background-color: rgba(126, 154, 163, 0.884);
}

.project:nth-child(5) {
  background-color: rgba(126, 154, 163, 0.725);
}

.projectsSectionHeader {
  margin-bottom: 20px;
  font-size: 30px;
}

.projectDetails {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.projectHeader {
  margin-bottom: 25px;
  font-size: 25px;
}

.projectScreenshot {
  width: 300px;
}

.screenshotContainer {
  width: 300px;
  align-self: center;
}

.languageList {
  display: flex;
  justify-content: space-around;
  margin-bottom: 34px;
  margin-top: 20px;
}

.languageSymbol {
  display: inline-block;
  width: 50px;
  height: 50px;
}

.projectButtons {
  margin-top: 20px;
  display: flex;
  justify-content: space-around;
}

.button {
  background-color: #a3877e; 
  border-radius: 2px;
  color: black;
  padding: 5px 0;
  text-decoration: none;
  width: 120px; 
  text-align: center;
  text-transform: uppercase;
  font-family: 'Raleway', sans-serif;
}

.contactSection {
  margin-top: 20px;
  align-items: center;
}

.contactHeader {
  margin-top: 15px;
}

.contactMethods {
  list-style: none;
  padding-left: 0;
}

.contactMethod {
  margin-top: 10px;
  position: relative;
}

.contactLink, .contactSymbol {
  vertical-align: middle;
}

.contactLink {
  text-decoration: none;
  color: black;
  width: 250px;
  position: relative;
  display: block;
}

.fa-envelope, .fa-github, .fa-linkedin {
  font-size: 34px;
  margin-right: 30px;
}

.contactSpan {
  position: absolute;
  width: 100px;
  left: 75px;
  top: 3px;
}

@media screen and (min-width: 850px) {
  .bioSection {
    margin-top: 35px;
  }
  .bioContainer {
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 30px;
    margin-top: 50px;
    padding-left: 10%;
    padding-right: 10%;
  }
  .profpic {
    width: 250px;
    margin: 0 50px 0 0;
  }
  .skillsContainer {
    flex-direction: row;
    justify-content: space-around;
  }
  .skillList{
    padding-left: 60px;
  }
  .project {
    flex-direction: row;
    align-items: center;
    padding: 0 12% 2% 12%;
    justify-content: space-around;
  }
  .projectDetails {
    max-width: 80%;
    margin-right: 10px;
  }
  .screenshotContainer {
    min-width: 400px;
  }
  .projectScreenshot {
    width: 100%;
  }
  .bioParagraph, .projectDescription, .contactBlurb {
    font-size: 20px;
  }
  .projectDescription{
    max-width: 400px;
  }
  .projectTechSpecs {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    min-width: 360px;
    height: 268px;
    margin-left: 30px;
  }
  .button {
    width: 120px;
  }
  .languageSymbol {
    width: 70px;
    height: 70px;
  }
}

@media screen and (min-width: 910px) {
  .hero {
    padding-top: 100px;
  } 
  .title {
    font-size: 200%;
    font-weight: 600;
    text-transform: uppercase;
    color: rgb(248, 247, 246);
    letter-spacing: 2px;
    text-shadow: 1px 1px rgba(0, 0, 0, 0.200);
  }
  .subtitle {
    font-size: 150%;
    font-weight: 600;
    color: black;
    letter-spacing: 1px;
  }
  .sectionHeader {
    font-size: 30px;
  }
  .skillHeader {
    font-size: 25px;
  }
  .projectsSectionHeader {
    font-size: 35px;
  }
  .projectHeader {
    font-size: 30px;
  }
  .topnav a {
    font-size: 22px;
  }
  .logo {
    width: 36px;
    height: 36px;
  }
  a.active {
    margin-top: 8px;
  }
  .logoName {
    bottom: 11px;
    left: 11px;
  }
}

